--- a/dominion.cabal
+++ b/dominion.cabal
@@ -24,7 +24,7 @@ Test-Suite test-dominion
   main-is:             Main.hs
 
 Library
-  Exposed-modules: Dominion, Dominion.Cards, Dominion.Cards.Base, Dominion.Cards.Original, Dominion.Cards.Intrigue, Dominion.Strategies, Dominion.Types, Dominion.Internal
+  Exposed-modules: Dominion, Dominion.Cards, Dominion.Cards.Base, Dominion.Strategies, Dominion.Types, Dominion.Internal
   Build-depends: base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3, containers ==0.5.*
   Other-modules: Dominion.Utils
   hs-source-dirs:      src
