--- a/dominion.cabal
+++ b/dominion.cabal
@@ -13,18 +13,56 @@ synopsis: A simulator for the board game Dominion.
 description: A simulator for the board game Dominion.
 
 executable dominion
-  build-depends:       base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3, containers ==0.5.*
-  hs-source-dirs:      src
-  main-is: Main.hs
+  build-depends:  base ==4.6.*,
+                  mtl ==2.1.2, 
+                  lens ==3.9.0.2, 
+                  transformers ==0.3.0.0,
+                  random-fu ==0.2.4.0, 
+                  random-extras ==0.19, 
+                  random ==1.0.1.1, 
+                  hscolour ==1.20.3, 
+                  containers ==0.5.*, 
+                  monad-logger ==0.3.*, 
+                  text ==0.11.*,
+                  text-format ==0.3.*
+  hs-source-dirs: src
+  main-is:        Main.hs
 
 Test-Suite test-dominion
-  type:       exitcode-stdio-1.0
-  build-depends:       base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3, containers ==0.5.*, dominion, hspec ==1.7.2.1
-  hs-source-dirs:      spec, src
-  main-is:             Main.hs
+  type:           exitcode-stdio-1.0
+  build-depends:  base ==4.6.*, 
+                  mtl ==2.1.2, 
+                  lens ==3.9.0.2, 
+                  transformers ==0.3.0.0, 
+                  random-fu ==0.2.4.0, 
+                  random-extras ==0.19, 
+                  random ==1.0.1.1, 
+                  hscolour ==1.20.3, 
+                  containers ==0.5.*, 
+                  dominion, 
+                  hspec ==1.7.2.1
+  hs-source-dirs: spec,
+                  src
+  main-is:        Main.hs
 
 Library
-  Exposed-modules: Dominion, Dominion.Cards, Dominion.Cards.Base, Dominion.Strategies, Dominion.Types, Dominion.Internal
-  Build-depends: base ==4.6.*, mtl ==2.1.2, lens ==3.9.0.2, transformers ==0.3.0.0, random-fu ==0.2.4.0, random-extras ==0.19, random ==1.0.1.1, hscolour ==1.20.3, containers ==0.5.*
-  Other-modules: Dominion.Utils
-  hs-source-dirs:      src
+  Exposed-modules:  Dominion, 
+                    Dominion.Cards, 
+                    Dominion.Cards.Base, 
+                    Dominion.Strategies, 
+                    Dominion.Internal
+  Build-depends:    base ==4.6.*, 
+                    mtl ==2.1.2, 
+                    lens ==3.9.0.2, 
+                    transformers ==0.3.0.0, 
+                    random-fu ==0.2.4.0, 
+                    random-extras ==0.19, 
+                    random ==1.0.1.1, 
+                    hscolour ==1.20.3, 
+                    containers ==0.5.*, 
+                    monad-logger ==0.3.*, 
+                    text ==0.11.*,
+                    text-format ==0.3.*
+
+  Other-modules:    Dominion.Utils
+  hs-source-dirs:   src
