--- a/dominion.cabal
+++ b/dominion.cabal
@@ -24,7 +24,11 @@ executable dominion
                   containers ==0.5.*, 
                   monad-logger ==0.3.*, 
                   text ==0.11.*,
-                  text-format ==0.3.*
+                  text-format ==0.3.*,
+                  optparse-applicative ==0.8.*,
+                  bytestring ==0.10.*,
+                  fast-logger ==2.1.*
+
   hs-source-dirs: src
   main-is:        Main.hs
 
@@ -41,8 +45,10 @@ Test-Suite test-dominion
                   containers ==0.5.*, 
                   dominion, 
                   hspec ==1.7.2.1
+
   hs-source-dirs: spec,
                   src
+
   main-is:        Main.hs
 
 Library
@@ -51,6 +57,7 @@ Library
                     Dominion.Cards.Base, 
                     Dominion.Strategies, 
                     Dominion.Internal
+
   Build-depends:    base ==4.6.*, 
                     mtl ==2.1.2, 
                     lens ==3.9.0.2, 
@@ -62,7 +69,10 @@ Library
                     containers ==0.5.*, 
                     monad-logger ==0.3.*, 
                     text ==0.11.*,
-                    text-format ==0.3.*
+                    text-format ==0.3.*,
+                    bytestring ==0.10.*,
+                    fast-logger ==2.1.*                    
 
   Other-modules:    Dominion.Utils
+
   hs-source-dirs:   src
